--- a/.chainlit/config.toml
+++ b/.chainlit/config.toml
@@ -116,5 +116,9 @@ cot = "full"
 #     icon_url = "https://avatars.githubusercontent.com/u/128686189?s=200&v=4"
 #     url = "https://github.com/Chainlit/chainlit/issues"
 
+[auth]
+# Enable authentication
+enable = true
+
 [meta]
 generated_by = "2.5.5"
