--- a/.env.sample
+++ b/.env.sample
@@ -2,6 +2,10 @@ TAVILY_API_KEY="tvly-..."
 ANTHROPIC_API_KEY="sk-ant-api03-..."
 OPENAI_API_KEY="sk-proj-..."
 
+# Chainlit Authentication Secret (generate with: chainlit create-secret)
+CHAINLIT_AUTH_SECRET="..."
+
+# LangSmith (optional)
 LANGSMITH_API_KEY="lsv2_pt_..."
 LANGSMITH_TRACING=false
 LANGSMITH_ENDPOINT="https://api.smith.langchain.com"
