--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
+# Virtual environment
 .venv
+venv/
+env/
+
+# Environment variables
 .env
+.env.local
+
+# Python cache
 __pycache__/
 *.pyc
+*.pyo
+*.pyd
+
+# SQLite databases
+*.db
+*.db-shm
+*.db-wal
+checkpoints.db*
+
+# Chainlit
+.chainlit/translations/
+.files/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
